--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -6,7 +6,7 @@
 
   <link rel="shortcut icon" type="image/png" href="jasmine-1.3.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="jasmine-1.3.0/jasmine.css">
-  <script data-main="specRunner" src="../vendor/requirejs/require.js"></script>
+  <script data-main="specRunner" src="../lib/requirejs/require.js"></script>
 </head>
 
 <body>
