--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -6,7 +6,37 @@
 
   <link rel="shortcut icon" type="image/png" href="jasmine-1.3.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="jasmine-1.3.0/jasmine.css">
-  <script data-main="specRunner" src="../lib/requirejs/require.js"></script>
+  <script src="jasmine-1.3.0/jasmine.js"></script>
+  <script src="jasmine-1.3.0/jasmine-html.js"></script>
+  <!-- libs -->
+  <script src="../lib/jquery/jquery.min.js"></script>
+  <script src="../lib/underscore/underscore-min.js"></script>
+  <script src="../lib/knockout/build/knockout-latest.js"></script>
+  <!-- src -->
+  <script src="../src/extend.js"></script>
+  <script src="../src/baseviewmodel.js"></script>
+  <!-- spec -->
+  <script src="specs/baseviewmodel.spec.js"></script>
+
+  <script>
+  var jasmineEnv = jasmine.getEnv();
+  jasmineEnv.updateInterval = 1000;
+
+  var htmlReporter = new jasmine.HtmlReporter();
+
+  jasmineEnv.addReporter(htmlReporter);
+
+  jasmineEnv.specFilter = function (spec) {
+    return htmlReporter.specFilter(spec);
+  };
+
+
+
+  $(function () {
+    jasmineEnv.execute();
+  });
+  </script>
+
 </head>
 
 <body>
