--- a/test/runner-amd.html
+++ b/test/runner-amd.html
@@ -8,32 +8,6 @@
   <div id="mocha"></div>
   <script src="../node_modules/mocha/mocha.js"></script>
   <script src="../node_modules/should/should.js"></script>
-  <script src="../lib/requirejs/require.js"></script>
-  <script>
-    mocha.setup('bdd');
-
-    require.config({
-      urlArgs: '_=' + (new Date()).getTime(),
-      baseUrl: '../src/',
-      paths: {
-        ko: '../lib/knockout/build/output/knockout-latest.debug',
-        underscore: '../lib/underscore/underscore-min',
-        specs: '../test/specs/',
-      },
-      shim: {
-        underscore: {
-          exports: '_'
-        }
-      }
-    });
-
-    require(['underscore', 'ko', 'baseviewmodel'], function (_, ko, BaseViewModel) {
-      require(['specs/baseviewmodel.spec'], function () {
-        mocha.run();
-      });
-    });
-  </script>
-  
-  <!--<script src="../lib/requirejs/require.js" data-main="runner.js"></script>-->
+  <script src="../lib/requirejs/require.js" data-main="runner-amd.js"></script>
 </body>
 </html>
