updated UMD definition, updated docs output dir structure

--- a/test/runner.html
+++ b/test/runner.html
@@ -7,7 +7,7 @@
 <body>
   <div id="mocha"></div>
   <script src="../lib/underscore/underscore-min.js"></script>
-  <script src="../lib/knockout/build/output/knockout-latest.js"></script>
+  <script src="../lib/knockout/build/output/knockout-latest.debug.js"></script>
   <script src="../node_modules/mocha/mocha.js"></script>
   <script src="../node_modules/should/should.js"></script>
   <script src="../src/baseviewmodel.js"></script>
